Soda Can Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Programming\Soda Can Project
-d
C:\Programming\Soda Can Project\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Programming\Soda Can Project\SodaCan.java
<---- end of javadoc command ---->
Loading source file C:\Programming\Soda Can Project\SodaCan.java...
C:\Programming\Soda Can Project\SodaCan.java:17: error: invalid method declaration; return type required
    public can (double height, diameter)
           ^
C:\Programming\Soda Can Project\SodaCan.java:17: error: <identifier> expected
    public can (double height, diameter)
                                       ^
C:\Programming\Soda Can Project\SodaCan.java:37: error: ')' expected
        return (2(Math.pi()) * (radius * radius) * height);
                 ^
C:\Programming\Soda Can Project\SodaCan.java:37: error: ';' expected
        return (2(Math.pi()) * (radius * radius) * height);
                           ^
C:\Programming\Soda Can Project\SodaCan.java:37: error: not a statement
        return (2(Math.pi()) * (radius * radius) * height);
                                       ^
C:\Programming\Soda Can Project\SodaCan.java:37: error: ';' expected
        return (2(Math.pi()) * (radius * radius) * height);
                                               ^
C:\Programming\Soda Can Project\SodaCan.java:37: error: not a statement
        return (2(Math.pi()) * (radius * radius) * height);
                                                   ^
C:\Programming\Soda Can Project\SodaCan.java:37: error: ';' expected
        return (2(Math.pi()) * (radius * radius) * height);
                                                         ^
8 errors
